--- a/aluraSpring/2_SpringBoot_ApiRest_MedicAdmin/docker-compose.yml
+++ b/aluraSpring/2_SpringBoot_ApiRest_MedicAdmin/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   db:
-    image: mysql 8.0
-    container_name: medic_app_db
+    image: mysql:8.0
+    container_name: medic_app_container
     restart: always
     ports:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: medic_app
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_DATABASE: medic_app_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: 12345
