--- a/aluraSpring/2_SpringBoot_ApiRest_MedicAdmin/src/main/resources/application.properties
+++ b/aluraSpring/2_SpringBoot_ApiRest_MedicAdmin/src/main/resources/application.properties
@@ -1,19 +1,11 @@
-spring.application.name=ApiMedic
-
-
-#Global Path
-server.servlet.context-path=/api/v1
-
-spring.datasource.url=jdbc:mysql://localhost:3306/medic_app_db
+spring.datasource.url=jdbc:mysql://localhost/medic_app_db
 spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=12345
 
-#Configuraciones de JPA
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-stacktrace=never
 
-#Dialecto
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+api.security.secret=${JWT_SECRET:123456}
+
